Issue 6860: Avoid overlapping of element with breakpoint mutation type within Breakpoints side panel

--- a/extension/skin/classic/breakpoint.css
+++ b/extension/skin/classic/breakpoint.css
@@ -26,7 +26,14 @@
 
 .breakpointBlockHead {
     position: relative;
+    display: flex;
     padding-top: 4px;
+}
+
+.breakpointBlockHead .objectLink {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .breakpointBlockHead > .checkbox {
@@ -123,3 +130,31 @@
 }
 
 /************************************************************************************************/
+/* Breakpoint from html panel */
+
+.breakpointCode .twisty {
+    display: none;
+}
+
+.breakpointCode .nodeBox.containerNodeBox,
+.breakpointCode .nodeLabel {
+    padding-left: 0px;
+    margin-left: 0px;
+    font-family: monospace !important;
+}
+
+.breakpointCode .nodeTag,
+.breakpointCode .nodeAttr,
+.breakpointCode .nodeText,
+.breakpointCode .nodeValue,
+.breakpointCode .nodeLabel {
+    color: DarkGreen !important;
+}
+
+.breakpointMutationType {
+    flex-shrink: 0;
+    top: 4px;
+    color: gray;
+    margin-right: 20px;
+    margin-left: auto;
+}
